[tool.poetry]
name = "minimal_flask_example"
version = "0.1.0"
description = "Learn how to make a simple Flask web app."
authors = ["Adam Djellouli <addjellouli1@gmail.com>"]
maintainers = ["Adam Djellouli <addjellouli1@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/djeada/Minimal-Flask-App"
repository = "https://github.com/djeada/Minimal-Flask-App"
documentation = "https://github.com/djeada/Minimal-Flask-App/blob/main/README.md"
keywords = [
    "Flask",
    "Minimal",
    "Framework",
    "Python",
    "Tutorial"
]

[tool.poetry.dependencies]
python = "^3.8"
flask = "*"
flask_assets = "*"
faker = "*"
requests = "*"
python-dotenv = "*"

[tool.poetry.dev-dependencies]
lesscpy = "*"
cssmin = "*"
jsmin = "*"
pytest = "*"
black = "^20.8b1"
isort = "*"
flake8 = "^3.9.0"

[tool.poetry.scripts]
run = "wsgi:app"

[tool.poetry.urls]
issues = "https://github.com/djeada/Minimal-Flask-App/issues"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
